EN-15283, EN-15274: CLP styling + color contrast fixes (#4396)
* EN-15283: CLP styling - left-align headline and description

* EN-15274: CLP color contrast fixes

--- a/frontend/app/styles/catalog-landing-page/_category_stats.scss
+++ b/frontend/app/styles/catalog-landing-page/_category_stats.scss
@@ -4,7 +4,7 @@
   .stats-title {
     font-size: 1.2rem;
     font-weight: normal;
-    color: $dark-grey-1;
+    color: $dark-grey-2;
     margin-bottom: 0.25rem;
   }
   .stat-counts {
